# tt-metal-playground

./: .gitignore  CMakeLists.txt  README.md  main.cpp
dram_loopback/: CMakeLists.txt  dram_loopback.cpp  main.cpp
dram_loopback/kernels/dataflow/: loopback_dram_copy.cpp
dummy/: CMakeLists.txt  main.cpp
